fix gallery overflow

--- a/css/style.css
+++ b/css/style.css
@@ -375,7 +375,7 @@ footer p {
 
 .video-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(500px, 1fr)); /*Reduced min width to prevent overflow*/
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); /*Reduced min width to prevent overflow*/
     grid-gap: 10px;
     padding: 10px;
     overflow: hidden; /* Ensure no overflow */
